--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+html, body {
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
+  font-family: 'Roboto', sans-serif;
+}
+
+.mat-drawer-container {
+  min-height: 100vh;
+}
