--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,10 @@
 <mat-sidenav-container>
-  <mat-sidenav #sidenav [(opened)]="opened">
-    <mat-nav-list role="list">
-      <a (click)="sidenav.close()" routerLink="/" mat-list-item>
-        <mat-icon matListIcon>bookmarks</mat-icon>
-          Courses
-      </a>
-      <a (click)="sidenav.close()" routerLink="/" mat-list-item>
-        <mat-icon matListIcon>face</mat-icon>
-          Students
-      </a>
-      <mat-list-item (click)="sidenav.close()">
-        <button mat-icon-button>
-          <mat-icon>power_settings_new</mat-icon>
-          Logout
-        </button>
-      </mat-list-item>
-    </mat-nav-list>
+  <mat-sidenav [(opened)]="sideNavOpened">
+    <app-sidenav-list (closeSidebar)="closeSidebar($event)"></app-sidenav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <main>
-      <app-toolbar (sideNavToggle)="toggleSidebar($event)"></app-toolbar>
+      <app-toolbar (authChange)="authChange($event)" (sideNavToggle)="toggleSidebar($event)"></app-toolbar>
       <router-outlet></router-outlet>
     </main>
   </mat-sidenav-content>
