add student & courses view

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -14,3 +14,47 @@
       </button>
     </form>
 </section>
+
+
+<div class="container">
+  <mat-card class="mb-15">
+    <mat-card-title>
+        Welcome To Dashboard
+    </mat-card-title>
+  </mat-card>
+
+  <div fxLayout="row unwrap" fxLayoutGap="15px">
+    <div fxFlex="calc(50% - 15px)" class="mb-15">
+        <mat-card>
+          <mat-card-title>
+              Latest added courses
+          </mat-card-title>
+          <mat-card-content>
+              hello world
+          </mat-card-content>
+          <mat-card-footer>
+            <button mat-button color="warn">
+              show all courses
+            </button>
+          </mat-card-footer>
+        </mat-card>
+    </div>
+    <div fxFlex="calc(50% - 15px)" class="mb-15">
+        <mat-card>
+          <mat-card-title>
+              Latest added students
+          </mat-card-title>
+          <mat-card-content>
+            hello world
+          </mat-card-content>
+          <mat-card-footer>
+            <button mat-button color="warn">
+              show all students
+            </button>
+          </mat-card-footer>
+        </mat-card>
+    </div>
+  </div>
+
+</div>
+<!-- container -->
