--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -24,7 +24,7 @@
             <a routerLink="/">Logout</a>
           </li>
           <li *ngIf="!isAuth">
-            <a routerLink="/">Login</a>
+            <a routerLink="/" (click)="logout()">Login</a>
           </li>
         </ul>
       </div>
