--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import '~@swimlane/ngx-datatable/release/index.css';
+@import '~@swimlane/ngx-datatable/release/themes/material.css';
+@import '~@swimlane/ngx-datatable/release/themes/bootstrap.css';
+@import '~@swimlane/ngx-datatable/release/assets/icons.css';
 
 html, body {
   margin: 0;
@@ -8,6 +12,27 @@ html, body {
   font-family: 'Roboto', sans-serif;
 }
 
+.container {
+  max-width: 1200px;
+  padding: 0 1em;
+  margin: 0 auto;
+}
+
+.mb-15 {
+  margin-bottom: 15px;
+}
+
 .mat-drawer-container {
   min-height: 100vh;
+}
+
+table {
+  margin: 0;
+  width: 100%;
+}
+
+.sidenav {
+  a {
+    display: block;
+  }
 }
