--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -15,10 +15,10 @@
             <a routerLink="/">Home</a>
           </li>
           <li *ngIf="isAuth">
-            <a routerLink="/">Courses</a>
+            <a routerLink="/dashboard/courses">Courses</a>
           </li>
           <li *ngIf="isAuth">
-            <a routerLink="/">Students</a>
+            <a routerLink="/dashboard/students">Students</a>
           </li>
           <li *ngIf="isAuth">
             <a routerLink="/">Logout</a>
