--- a/src/app/core/courses/courses.component.html
+++ b/src/app/core/courses/courses.component.html
@@ -18,11 +18,21 @@
         <td mat-cell *matCellDef="let course"> {{course.name}} </td>
       </ng-container>
 
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef>Date</th>
+        <td mat-cell *matCellDef="let course"> {{course.date | date}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="students">
+        <th mat-header-cell *matHeaderCellDef>Students No</th>
+        <td mat-cell *matCellDef="let course"> {{course.students.length}} </td>
+      </ng-container>
+
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Action</th>
         <td mat-cell *matCellDef="let course">
           <button (click)="editCourse(course.id)" mat-button color="primary">Edit</button>
-          <button mat-button color="warn">Delete</button>
+          <button (click)="openDialog(course.id)" mat-button color="warn">Delete</button>
         </td>
       </ng-container>
 
@@ -31,7 +41,7 @@
 
     </table>
 
-    <mat-paginator #paginator [pageSize]="1" [pageSizeOptions]="[5, 10, 15]">
+    <mat-paginator #paginator [pageSize]="5" [pageSizeOptions]="[10, 50, 100]">
 
     </mat-paginator>
 
