--- a/src/app/core/students/students.component.html
+++ b/src/app/core/students/students.component.html
@@ -27,13 +27,15 @@
       </ng-container>
       <ng-container matColumnDef="image">
         <th mat-header-cell *matHeaderCellDef>Image</th>
-        <td mat-cell *matCellDef="let student"> {{student.image}} </td>
+        <td mat-cell *matCellDef="let student">
+          <img *ngIf="student.image" style="width: 60px" [src]="student.image" [alt]="student.name">
+        </td>
       </ng-container>
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Action</th>
         <td mat-cell *matCellDef="let student">
           <button (click)="editStudent(student.id)" mat-button color="primary">Edit</button>
-          <button mat-button color="warn">Delete</button>
+          <button mat-button color="warn" (click)="openDialog(student.id)">Delete</button>
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
