--- a/src/app/core/students/students.component.html
+++ b/src/app/core/students/students.component.html
@@ -5,42 +5,42 @@
     <h2>Availiable Courses</h2>
 
     <mat-form-field>
-      <input (keyup)="doFilter($event.target.value)" type="text" matInput placeholder="Filter Courses...">
+      <input (keyup)="doFilter($event.target.value)" type="text" matInput placeholder="Filter Students...">
     </mat-form-field>
 
-    <table mat-table [dataSource]="dataSource">
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>ID</th>
-        <td mat-cell *matCellDef="let student"> {{student.id}} </td>
-      </ng-container>
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let student"> {{student.name}} </td>
-      </ng-container>
-      <ng-container matColumnDef="age">
-        <th mat-header-cell *matHeaderCellDef>Age</th>
-        <td mat-cell *matCellDef="let student"> {{student.age}} </td>
-      </ng-container>
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef>Email</th>
-        <td mat-cell *matCellDef="let student"> {{student.email}} </td>
-      </ng-container>
-      <ng-container matColumnDef="image">
-        <th mat-header-cell *matHeaderCellDef>Image</th>
-        <td mat-cell *matCellDef="let student">
-          <img *ngIf="student.image" style="width: 60px" [src]="student.image" [alt]="student.name">
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef>Action</th>
-        <td mat-cell *matCellDef="let student">
-          <button (click)="editStudent(student.id)" mat-button color="primary">Edit</button>
-          <button mat-button color="warn" (click)="openDialog(student.id)">Delete</button>
-        </td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-      <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
-    </table>
+  </section>
+
+  <section>
+    <div class="card-list">
+      <mat-card *ngFor="let studentCard of filterArray">
+        <div mat-card-image class="mat-card-image-container"
+          [ngStyle]="studentCard.image ? {backgroundImage: 'url('+ studentCard.image +')'} : studentImage">
+        </div>
+
+        <mat-card-title>{{ studentCard.name }}</mat-card-title>
+        <mat-card-subtitle>ID: {{studentCard.id}}</mat-card-subtitle>
+        <mat-card-content>
+          <p>
+            <strong>Email:</strong>
+            {{studentCard.email}}
+          </p>
+          <p>
+            <strong>Age:</strong>
+            {{studentCard.age}}
+          </p>
+          <p>
+            <strong>
+              Creation Date:
+            </strong>
+            1/8/2018
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button (click)="editStudent(studentCard.id)" color="primary">Edit</button>
+          <button mat-button color="warn" (click)="openDialog(studentCard.id)">Delete</button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
 
   </section>
 </div>
