--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -12,7 +12,7 @@
       <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
         <ul class="toolbar-navigation" fxLayout fxLayoutGap="10px">
           <li *ngIf="isAuth">
-            <a routerLink="/">Home</a>
+            <a routerLink="/dashboard">Home</a>
           </li>
           <li *ngIf="isAuth">
             <a routerLink="/dashboard/courses">Courses</a>
