--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,10 @@
 @import '~@swimlane/ngx-datatable/release/themes/bootstrap.css';
 @import '~@swimlane/ngx-datatable/release/assets/icons.css';
 
+* {
+  box-sizing: border-box;
+}
+
 html, body {
   margin: 0;
   padding: 0;
@@ -35,4 +39,12 @@ table {
   a {
     display: block;
   }
+}
+
+app-login {
+  display: flex;
+  min-height: 89vh;
+  background: #eaefe2;
+  justify-content: center;
+  align-items: center;
 }
