--- a/src/app/core/students/students-overview/students-overview.component.scss
+++ b/src/app/core/students/students-overview/students-overview.component.scss
@@ -8,7 +8,7 @@
     margin-bottom: 1em;
 
     @media (min-width: 540px) and (max-width: 767px) {
-      width: calc(51.6% - 1em);
+      width: calc(50.6% - 1em);
       margin-right: 1em;
 
       &:nth-child(2n+2) {
@@ -26,6 +26,7 @@
     }
 
     .mat-card-image-container {
+      display: block;
       height: 250px;
       background-repeat: no-repeat;
       background-position: center top;
