--- a/src/app/core/courses/courses-overview/courses-overview.component.html
+++ b/src/app/core/courses/courses-overview/courses-overview.component.html
@@ -20,7 +20,7 @@
 
       <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef>Date</th>
-        <td mat-cell *matCellDef="let course"> {{course.date | date}} </td>
+        <td mat-cell *matCellDef="let course"> {{ course.date | date:'medium' }} </td>
       </ng-container>
 
       <ng-container matColumnDef="students">
