change toolbar title

--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -5,7 +5,7 @@
           <mat-icon>menu</mat-icon>
         </button>
         <a routerLink="/">
-          Dashboard
+          Training Center
         </a>
       </span>
 
